--- a/index.html
+++ b/index.html
@@ -3,64 +3,48 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LockScreen</title>
+<title>4-Spinner Glowing Grid Lock</title>
 <style>
   body, html {
 	height: 100%;
 	margin: 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 	background: #111;
-	color: #fff;
 	font-family: sans-serif;
 	user-select: none;
+	overflow: hidden;
 	touch-action: none;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
   }
 
-  .lock-container {
+  /* Pure grid container, no circle border */
+  .grid-container {
 	position: relative;
+	margin-top: 150px;
 	width: 400px;
 	height: 400px;
-	margin-bottom: 20px;
-  }
-
-  .circle {
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	border: 4px solid #fff;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
-	overflow: hidden;
-  }
-
-  .grid {
-	position: absolute;
-	width: 100%;
-	height: 100%;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(4, 1fr);
-	pointer-events: none;
+	gap: 4px;
   }
 
-  .grid div {
-	border: 1px solid rgba(255,255,255,0.2);
+  .grid-container div {
+	border: 2px solid rgba(0,255,255,0.3);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 12px;
-	color: rgba(255,255,255,0.5);
+	font-size: 14px;
+	color: #0ff;
+	text-shadow: 0 0 6px #0ff;
+	box-shadow: 0 0 12px rgba(0,255,255,0.4);
+	border-radius: 6px;
   }
 
   .spinner {
-	width: 60px;
-	height: 60px;
-	background: radial-gradient(circle, #ff3, #f90);
+	width: 70px;
+	height: 70px;
 	border-radius: 50%;
 	position: absolute;
 	cursor: grab;
@@ -68,61 +52,60 @@
 	justify-content: center;
 	align-items: center;
 	font-weight: bold;
-	font-size: 16px;
-	color: #000;
+	font-size: 18px;
+	color: #fff;
 	user-select: none;
 	transform-origin: center;
 	flex-direction: column;
+	box-shadow: 0 0 12px #fff, 0 0 24px #0ff;
+	border: 2px solid #0ff;
+	transition: transform 0.1s;
   }
 
-  .degrees {
+  .spinner .degrees {
 	font-size: 14px;
-	color: #000;
-	margin-top: 4px;
+	color: #0ff;
+	margin-top: 6px;
+	font-family: monospace;
+	text-shadow: 0 0 6px #0ff;
   }
 
   .unlocked {
 	position: absolute;
-	top: -50px;
-	left: 50%;
-	transform: translateX(-50%);
-	font-size: 24px;
+	top: 50px;
+	font-size: 28px;
 	color: #0f0;
-	animation: fade 1s ease-in-out forwards;
 	display: none;
+	text-shadow: 0 0 12px #0f0, 0 0 24px #0f0;
   }
 
   button {
-	margin: 5px;
-	padding: 8px 16px;
-	font-size: 16px;
+	margin-top: 40px;
+	padding: 10px 20px;
+	font-size: 18px;
 	cursor: pointer;
 	border: none;
-	border-radius: 6px;
+	border-radius: 8px;
 	background: #0af;
 	color: #000;
 	font-weight: bold;
+	box-shadow: 0 0 12px #0af;
   }
 
   button:disabled {
 	background: #444;
 	cursor: not-allowed;
-  }
-
-  @keyframes fade {
-	0% {opacity: 0;}
-	100% {opacity: 1;}
+	box-shadow: none;
   }
 </style>
 </head>
 <body>
 
-<div class="lock-container">
-  <div class="circle">
-	<div class="grid" id="grid"></div>
-	<div class="unlocked" id="unlocked">Unlocked!</div>
-  </div>
+<div class="grid-container" id="gridContainer">
+  <!-- Grid cells -->
 </div>
+
+<div class="unlocked" id="unlocked">Unlocked!</div>
 
 <div>
   <button id="lockBtn">Lock</button>
@@ -130,42 +113,46 @@
 </div>
 
 <script>
-const circle = document.querySelector('.circle');
+const gridContainer = document.getElementById('gridContainer');
 const unlockedMsg = document.getElementById('unlocked');
-const grid = document.getElementById('grid');
 const lockBtn = document.getElementById('lockBtn');
 const unlockBtn = document.getElementById('unlockBtn');
 
 const gridSize = 4;
-const cellSize = circle.clientWidth / gridSize;
+const cellSize = gridContainer.clientWidth / gridSize;
 
 let spinners = [];
 let combination = null;
 
-// Initialize grid cells
+// Create grid cells
 for(let y=0; y<gridSize; y++){
   for(let x=0; x<gridSize; x++){
 	let cell = document.createElement('div');
 	cell.textContent = `${x},${y}`;
-	grid.appendChild(cell);
+	gridContainer.appendChild(cell);
   }
 }
 
-// Create 4 spinners
+// Colors for spinners
+const colors = ['#ff33cc', '#33ff77', '#33ccff', '#ffcc33'];
+
+// Create 4 spinners above the grid
 for(let i=0; i<4; i++){
   const spinner = document.createElement('div');
   spinner.className = 'spinner';
+  spinner.style.background = `linear-gradient(135deg, ${colors[i]} 0%, #111 100%)`;
   spinner.innerHTML = `🌀<div class="degrees">000°</div>`;
-  circle.appendChild(spinner);
+  document.body.appendChild(spinner);
   spinner.currentRotation = 0;
   spinner.velocity = 0;
   spinner.lastY = 0;
   spinner.dragging = false;
   spinners.push(spinner);
-  // Arrange roughly in a square
-  const margin = 50;
-  spinner.style.left = `${margin + (i%2)*150}px`;
-  spinner.style.top = `${margin + Math.floor(i/2)*150}px`;
+
+  // Start above the grid
+  const gridRect = gridContainer.getBoundingClientRect();
+  spinner.style.left = `${gridRect.left + i*90}px`;
+  spinner.style.top = `${gridRect.top - 100}px`;
 }
 
 // Helper: get mouse/touch position
@@ -177,8 +164,8 @@ function getXY(e){
 let activeSpinner = null;
 
 function startDrag(e){
-  const {x, y} = getXY(e);
   activeSpinner = e.currentTarget;
+  const {x, y} = getXY(e);
   activeSpinner.dragging = true;
   activeSpinner.offsetX = x - activeSpinner.offsetLeft;
   activeSpinner.offsetY = y - activeSpinner.offsetTop;
@@ -192,30 +179,18 @@ function moveDrag(e){
   if(!activeSpinner || !activeSpinner.dragging) return;
   const {x, y} = getXY(e);
 
-  // Drag position
+  // Move anywhere
   let newX = x - activeSpinner.offsetX;
   let newY = y - activeSpinner.offsetY;
-
-  // Keep inside circle
-  const centerX = circle.clientWidth/2 - activeSpinner.clientWidth/2;
-  const centerY = circle.clientHeight/2 - activeSpinner.clientHeight/2;
-  let dx = newX - centerX;
-  let dy = newY - centerY;
-  let distance = Math.sqrt(dx*dx + dy*dy);
-  let radius = circle.clientWidth/2 - activeSpinner.clientWidth/2;
-  if(distance > radius){
-	newX = centerX + dx/distance * radius;
-	newY = centerY + dy/distance * radius;
-  }
-  activeSpinner.style.left = newX + 'px';
-  activeSpinner.style.top = newY + 'px';
+  activeSpinner.style.left = `${newX}px`;
+  activeSpinner.style.top = `${newY}px`;
 
   // Rotation based on vertical drag
   let deltaY = y - activeSpinner.lastY;
   activeSpinner.currentRotation += deltaY;
   activeSpinner.velocity = deltaY;
   activeSpinner.style.transform = `rotate(${activeSpinner.currentRotation}deg)`;
-  activeSpinner.querySelector('.degrees').textContent = `${('000' + Math.round(activeSpinner.currentRotation % 360)).slice(-3)}°`;
+  activeSpinner.querySelector('.degrees').textContent = `${('000'+Math.round(activeSpinner.currentRotation%360)).slice(-3)}°`;
   activeSpinner.lastY = y;
 }
 
@@ -225,26 +200,23 @@ function endDrag(){
   activeSpinner = null;
 }
 
-// Momentum animation
+// Momentum
 function animateMomentum(){
   spinners.forEach(spinner => {
 	if(!spinner.dragging){
 	  if(Math.abs(spinner.velocity) > 0.1){
 		spinner.currentRotation += spinner.velocity;
 		spinner.style.transform = `rotate(${spinner.currentRotation}deg)`;
-		spinner.querySelector('.degrees').textContent = `${('000' + Math.round(spinner.currentRotation % 360)).slice(-3)}°`;
+		spinner.querySelector('.degrees').textContent = `${('000'+Math.round(spinner.currentRotation%360)).slice(-3)}°`;
 		spinner.velocity *= 0.95;
-	  } else {
-		spinner.velocity = 0;
-	  }
+	  } else spinner.velocity = 0;
 	}
   });
   requestAnimationFrame(animateMomentum);
 }
 animateMomentum();
 
-// Drag event listeners
-spinners.forEach(spinner => {
+spinners.forEach(spinner=>{
   spinner.addEventListener('mousedown', startDrag);
   spinner.addEventListener('touchstart', startDrag, {passive:false});
 });
@@ -254,57 +226,61 @@ document.addEventListener('touchmove', moveDrag, {passive:false});
 document.addEventListener('mouseup', endDrag);
 document.addEventListener('touchend', endDrag);
 
-// Lock button
-lockBtn.addEventListener('click', () => {
-  // Save combination
-  combination = spinners.map(spinner => {
-	const x = spinner.offsetLeft + spinner.clientWidth/2;
-	const y = spinner.offsetTop + spinner.clientHeight/2;
-	const gridX = Math.floor(x / cellSize);
-	const gridY = Math.floor(y / cellSize);
-	return {x: gridX, y: gridY, rotation: Math.round(spinner.currentRotation % 360)};
+// Lock: only allow spinners in grid
+lockBtn.addEventListener('click', ()=>{
+  combination = [];
+  let allInGrid = true;
+  spinners.forEach(spinner=>{
+	const rect = spinner.getBoundingClientRect();
+	const x = rect.left + rect.width/2 - gridContainer.getBoundingClientRect().left;
+	const y = rect.top + rect.height/2 - gridContainer.getBoundingClientRect().top;
+	const gridX = Math.floor(x/cellSize);
+	const gridY = Math.floor(y/cellSize);
+	if(gridX<0 || gridX>=gridSize || gridY<0 || gridY>=gridSize){
+	  allInGrid = false;
+	}
+	combination.push({x:gridX,y:gridY,rotation:Math.round(spinner.currentRotation%360)});
   });
-  
-  // Randomize spinner positions and rotations
-  spinners.forEach(spinner => {
-	const radius = circle.clientWidth/2 - spinner.clientWidth/2;
-	const angle = Math.random() * 2 * Math.PI;
-	const r = Math.random() * radius;
-	const centerX = circle.clientWidth/2 - spinner.clientWidth/2;
-	const centerY = circle.clientHeight/2 - spinner.clientHeight/2;
-	spinner.style.left = `${centerX + r * Math.cos(angle)}px`;
-	spinner.style.top = `${centerY + r * Math.sin(angle)}px`;
-	spinner.currentRotation = Math.floor(Math.random() * 360);
-	spinner.style.transform = `rotate(${spinner.currentRotation}deg)`;
-	spinner.querySelector('.degrees').textContent = `${('000' + spinner.currentRotation).slice(-3)}°`;
+  if(!allInGrid){
+	alert('All spinners must be inside the grid to lock!');
+	combination = null;
+	return;
+  }
+  alert('Combination saved! Spinners returned above the grid.');
+  const gridRect = gridContainer.getBoundingClientRect();
+  spinners.forEach((spinner,i)=>{
+	// Position above the grid
+	spinner.style.left = `${gridRect.left + i*90}px`;
+	spinner.style.top = `${gridRect.top - 100}px`;
+	
+	// Reset rotation
+	spinner.currentRotation = 0;
+	spinner.style.transform = `rotate(0deg)`;
+	spinner.querySelector('.degrees').textContent = '000°';
   });
-
-  alert('Combination saved for all 4 spinners! They have been randomized.');
   unlockBtn.disabled = false;
   lockBtn.disabled = true;
 });
 
-
-// Unlock button (exact degrees)
-unlockBtn.addEventListener('click', () => {
+// Unlock
+unlockBtn.addEventListener('click', ()=>{
   if(!combination) return alert('No combination saved!');
   let allCorrect = true;
-  spinners.forEach((spinner, i) => {
-	const x = spinner.offsetLeft + spinner.clientWidth/2;
-	const y = spinner.offsetTop + spinner.clientHeight/2;
-	const gridX = Math.floor(x / cellSize);
-	const gridY = Math.floor(y / cellSize);
-	const rotation = Math.round(spinner.currentRotation % 360);
-	if(gridX !== combination[i].x || gridY !== combination[i].y || rotation !== combination[i].rotation){
-	  allCorrect = false;
+  spinners.forEach((spinner,i)=>{
+	const rect = spinner.getBoundingClientRect();
+	const x = rect.left + rect.width/2 - gridContainer.getBoundingClientRect().left;
+	const y = rect.top + rect.height/2 - gridContainer.getBoundingClientRect().top;
+	const gridX = Math.floor(x/cellSize);
+	const gridY = Math.floor(y/cellSize);
+	const rotation = Math.round(spinner.currentRotation%360);
+	if(gridX!==combination[i].x || gridY!==combination[i].y || rotation!==combination[i].rotation){
+	  allCorrect=false;
 	}
   });
   if(allCorrect){
-	unlockedMsg.style.display = 'block';
-	setTimeout(() => window.location.href = 'https://example.com', 500);
-  } else {
-	alert('Incorrect combination!');
-  }
+	unlockedMsg.style.display='block';
+	setTimeout(()=>window.location.href='https://example.com',500);
+  } else alert('Incorrect combination!');
 });
 </script>
 
